@@ -12,6 +12,7 @@
 
 					<a href="add_record_form.php">[+] Add Record</a> | 
 					<a href="creare_user_form.php">[+] Add User</a> | 
+					<a href="view_rooms.php">View Room</a> |
 					<a href="view_records.php"> View Record</a> | 
 					<a href="logout.php"> Logout</a>
 
